objects/Rollout_Step__c.object
<CustomObject>
    <fields>
        <fullName>Case__c</fullName>
        <label>Case</label>
        <referenceTo>Case</referenceTo>
        <relationshipName>Connectivity_Rollouts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Completed_Date__c</fullName>
        <label>Completed Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Connection__c</fullName>
        <label>Connection</label>
        <referenceTo>Connection__c</referenceTo>
        <relationshipName>Connectivity_Rollouts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Created_Date_Time__c</fullName>
        <formula>CreatedDate</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Created Date/Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Rollout_Step__c</fullName>
        <label>Rollout Step</label>
        <picklist>
            <picklistValues>
                <fullName>Enrollment Form Sent</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>First Enrollment Chaser</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Second Enrollment Chaser</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Third Enrollment Chaser</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Enrollment Form Received</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mapping Information Sent</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>First Mapping Chaser</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Second Mapping Chaser</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Third Mapping Chaser</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mapping Confirmation Received</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Soft Launch</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Rollout Step</label>
    <nameField>
        <displayFormat>{00000000}</displayFormat>
        <label>Rollout Step Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Rollout Steps</pluralLabel>
    <recordTypes>
        <fullName>Connectivity</fullName>
        <active>true</active>
        <label>Connectivity</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>